[Refactor] routing backend에 Java 21 API 적용 (#2166)